# agent-talk

./: .env.example  .gitignore  .railwayignore  Dockerfile  HYPR-REFACTOR-COMPLETE.md  HYPR-REFACTOR-PLAN.md  ORCHESTRATOR.md  PHASE1-COMPLETE.md  README.md  dashboard.html  hypr-app.json  index.html  keys.html  login.html  orchestrate.sh  orchestrator.py  package-lock.json  package.json  railway.toml  usage.html  vite.config.js
.github/workflows/: deploy.yml  health-check.yml
_archived/: .dockerignore
docs/: AUTH_MIGRATION.md  PROXY.md
docs/api/: README.md  authentication.md  endpoints.md  errors.md  examples.md  openapi.yaml  quick-start.md  rate-limits.md  voices.md
public/: app.css  dashboard.html  dashboard.js
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/agent_talk/: __init__.py  client.py  errors.py  py.typed  types.py
sdk/python/tests/: __init__.py  test_client.py
sdk/src/: client.ts  errors.ts  index.ts  memo.ts  types.ts  voices.ts
server/: generate-samples.mjs  package-lock.json  package.json  test-api-keys.ts  test-debug.ts  test-debug2.ts  test-edge-tts.mjs  test-storage.ts  tsconfig.json  vitest.config.ts
server/coverage/: coverage-final.json  index.html
server/docs/: HYPR-MICRO-SCHEMA.md
server/public/: app.js  index.html  login.html  login.js
server/src/: index.ts
server/tests/: api-keys.test.ts  auth.test.ts  billing.test.ts  memo.test.ts  rate-limit.test.ts  services.test.ts  setup.ts  tier-verification.ts
src/: App.svelte  Billing.svelte  Dashboard.svelte  Keys.svelte  Login.svelte  Usage.svelte  app.css  dashboard.js  index.html  keys.js  login.js  usage.js
src/lib/: UsageChart.svelte  charts.ts  hypr.ts
tasks/done/: task-134-agent-talk-auth.md  task-137-agent-talk-database.md  task-149.md  task-150-agent-talk-error-handling.md  (+9 more)
(+93 files in other folders)
