[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-talk"
version = "1.0.0"
description = "Python SDK for Agent Talk API - Text-to-speech for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Hyperio", email = "hello@hyper.io"}
]
keywords = [
    "tts",
    "text-to-speech",
    "ai",
    "voice",
    "speech",
    "elevenlabs",
    "agent",
    "sdk"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://talk.onhyper.io"
Documentation = "https://talk.onhyper.io/docs"
Repository = "https://github.com/hyperio/agent-talk"
Issues = "https://github.com/hyperio/agent-talk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_talk*"]

[tool.setuptools.package-data]
agent_talk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true